<resources>
    <string name="app_name">ShipmentTracking</string>
    <string name="name">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="email">E-mail address</string>
    <string name="password_again">Password Again</string>
    <string name="back">Back</string>
    <string name="title">Ordered List</string>
</resources>